--- a/package.json
+++ b/package.json
@@ -6,8 +6,17 @@
     "test-server": "mocha --colors --watch --recursive './test/**/*.test.js'",
     "test": "mocha --colors --recursive './test/**/*.test.js'"
   },
+  "private": true,
   "main": "./src/index.js",
-  "keywords": [],
+  "keywords": [
+    "interview",
+    "programming",
+    "questions",
+    "problems",
+    "algorithms",
+    "data-structures",
+    "computer-science"
+  ],
   "author": "atlassubbed <atlassubbed@gmail.com>",
   "license": "MIT",
   "devDependencies": {
@@ -17,5 +26,11 @@
   "engines": {
     "node": "^10.1.0",
     "npm": "^6.0.1"
+  },
+  "homepage": "https://github.com/atlassubbed/play-algorithms#readme",
+  "bugs": "https://github.com/atlassubbed/play-algorithms/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/atlassubbed/play-algorithms.git"
   }
 }
